# alphaevolve-on-googlecloud

./: .gitignore  CONTRIBUTING.md  README.md  example.env  pyproject.toml  requirements.txt
examples/adaptive_sort/: README.md  evaluator.py  run_experiment.py
examples/adaptive_sort_cpp/: README.md  evaluator.py  (+1 more)
hpc-batch-ctk/: AGENT.md  CREATE_EXPERIMENT.md  README.md  alpha-evolve-deployment.yaml  alpha-evolve-experiment.yaml  alpha-evolve-infra.yaml
skills/: README.md  ae_cli-0.2.7-py3-none-any.whl  pyproject.toml  setup_ae.py
skills/ae_cli/: __init__.py  cli.py  client.py  completions.py  config.py  controller.py  dashboard.py  evaluator.py  formatting.py  locks.py  nicknames.py  skills_install.py  version.py  visualization.py
skills/alpha_evolve_consultant/: README.md  SKILL.md
skills/alpha_evolve_consultant/references/: api_and_infrastructure.md  domain_background.md  evaluator_and_scoring.md  experiment_design.md  runtime_configuration.md  suitability_and_architecture.md  troubleshooting.md
skills/alpha_evolve_experiment_design/: README.md  SKILL.md
skills/alpha_evolve_experiment_design/examples/circle_packing/: README.md  evaluator.py  example_evaluation.json  initial_program.py  problem_description.md  pyproject.toml  test_evaluator.py  test_program.py
skills/alpha_evolve_experiment_design/references/: evaluator_patterns.md  evolve_block_guide.md  multi_file_guide.md  numerical_stability.md  phase_1_clarify.md  phase_2_implement.md
skills/alpha_evolve_experiment_design/resources/: experiment_description_schema.py
skills/alpha_evolve_monitor/: README.md  SKILL.md
skills/alpha_evolve_monitor/references/: cli_reference.md  debugging.md  models.md
skills/alpha_evolve_orchestrator/: README.md  SKILL.md
skills/alpha_evolve_orchestrator/references/: handoff_contracts.md
skills/alpha_evolve_post_experiment/: README.md  SKILL.md
skills/alpha_evolve_post_experiment/references/: cli_reference.md  debugging.md  integration_patterns.md  visualization.md
skills/alpha_evolve_runner/: README.md  SKILL.md
skills/alpha_evolve_runner/references/: cli_reference.md  debugging.md
tests/: test_client.py  test_controller.py  test_evaluator.py  test_experiment.py  test_utils.py  test_visualization.py  test_workers.py
(+197 files in other folders)
